Closed
Bug 142918
Opened 23 years ago
Closed 23 years ago
crash in button_onblur test case within frames
Categories
(Core :: DOM: UI Events & Focus Handling, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.0
People
(Reporter: danm.moz, Assigned: danm.moz)
References
()
Details
(Keywords: topembed+, Whiteboard: [adt3 RTM])
Attachments
(1 file)
1020 bytes,
patch
|
saari
:
review+
jst
:
superreview+
blizzard
:
approval+
|
Details | Diff | Splinter Review |
An embedding client which Shall Not Be Named, and I don't mean mfcEmbed, has
been experiencing crashes in nsEventStateManager. Steps to reproduce, taken from
bugscape 14292:
1. launch mystery client
2. logon, navigate to
http://bubblegum.mcom.com/browser/standards/html-transitional/tests/
3. scroll down in the left hand frame until you see the test case
'button_onblur.html" click it to load.
4. when page loads, hit 'this is button2. click on me"
Result: Client crashes immediately after the results dialog pops up.
100% reproducible, so far only tested on win2k. Not reproducible in mfcembed
from 4/19
Severity: normal → blocker
Status: NEW → ASSIGNED
Keywords: topembed+
QA Contact: rakeshmishra → jmkobayashi
Target Milestone: --- → mozilla1.0
I still can't reproduce this crash in a debug build of the Mystery Client from
today's source. But other folks continue to see the crash. This patch should
stop it.
Comment 2•23 years ago
|
||
Can you attach a screenshot of that mystery client if you can't give us the name ?
Comment 3•23 years ago
|
||
Comment on attachment 82751 [details] [diff] [review]
guard gLastFocusedContent against null
sr=jst
Attachment #82751 -
Flags: superreview+
Updated•23 years ago
|
QA Contact: jmkobayashi → moied
Comment 4•23 years ago
|
||
Internal Reference:
http://bugscape.mcom.com/show_bug.cgi?id=14292
Comment 5•23 years ago
|
||
Comment on attachment 82751 [details] [diff] [review]
guard gLastFocusedContent against null
r=saari
Attachment #82751 -
Flags: review+
Comment 6•23 years ago
|
||
Comment on attachment 82751 [details] [diff] [review]
guard gLastFocusedContent against null
a=blizzard on behalf of drivers for the 1.0 branch
Attachment #82751 -
Flags: approval+
Well this is interesting. The prescribed test case on bubblegum.mcom.com has
never crashed on me. But this reduced test case:
<html><body>
<form>
<button onBlur="alert('button 1 blurred');">blur alert button</button>
</form>
</body></html>
which is borrowed straight out of the bubblegum test case, does crash the
Mystery Client for me *and* it crashes Mozilla. Huh. And handily, the patch
fixes both. Fix is checked in on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Comment 8•23 years ago
|
||
adt1.0.0+ approval (on ADT's hebalf) for checkin into the 1.0 branch .
Keywords: fixed1.0.0
Tested URL and testcases I don't see any problem and testcases with Mozilla
trunk 20020517 on winxp.
marking Verified
Status: RESOLVED → VERIFIED
Comment 10•23 years ago
|
||
Verified on the trunk build 2002-05-22-08-trunk on Windows 2000 , with the URL
and the testcase.
Comment 11•23 years ago
|
||
Verified on the branch build 2002-05-22-08-1.0.0 on Windows 2000 , with the URL
and the testcase.
adding verified1.0.0 to the keyword
Keywords: verified1.0.0
Updated•23 years ago
|
QA Contact: moied → rakeshmishra
Updated•6 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•