null guard gLastFocusedContent in PreHandleEvent. bug 142918 r=jst,saari a=blizzard